[gd_scene load_steps=13 format=3 uid="uid://b1ihwr7htshoh"]

[ext_resource type="Script" uid="uid://di4ua806shjco" path="res://Levels/Characters/Playable/Player.gd" id="1_cii8e"]
[ext_resource type="Texture2D" uid="uid://6vhmokfjhm40" path="res://tilemap.png" id="1_l6g0h"]
[ext_resource type="PackedScene" uid="uid://cvotitgj3b281" path="res://GUI/PlayerUI/player_ui.tscn" id="3_8gimx"]
[ext_resource type="PackedScene" uid="uid://bsqvch87gy4m3" path="res://GUI/PauseMenu/pause_menu.tscn" id="4_fh04t"]
[ext_resource type="Theme" uid="uid://dsukthfgyban6" path="res://GUI/Theme/main.tres" id="5_guvsc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cii8e"]
size = Vector2(6, 14)

[sub_resource type="Animation" id="Animation_lp6gb"]
resource_name = "Climb"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 6, 4, 5, 4]
}

[sub_resource type="Animation" id="Animation_gcq1o"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_6wgam"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_guvsc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fs1ck"]
resource_name = "Walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 2, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y4ysq"]
_data = {
&"Climb": SubResource("Animation_lp6gb"),
&"Fall": SubResource("Animation_gcq1o"),
&"Idle": SubResource("Animation_6wgam"),
&"RESET": SubResource("Animation_guvsc"),
&"Walk": SubResource("Animation_fs1ck")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_cii8e")
debug_mode = true

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_l6g0h")
hframes = 7
region_enabled = true
region_rect = Rect2(0, 0, 112, 16)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_cii8e")
debug_color = Color(0.97, 0.5141, 0.688862, 0.52549)

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="PlayerUI" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_8gimx")]
visible = true
player = NodePath("..")

[node name="PauseMenu" parent="." instance=ExtResource("4_fh04t")]

[node name="Camera" type="Camera2D" parent="."]
position_smoothing_speed = 8.0

[node name="StateDisplay" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -21.0
offset_right = 25.0
offset_bottom = -8.0
theme = ExtResource("5_guvsc")
text = "State"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y4ysq")
}

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_coyote_jump_timer_timeout"]
